[package]
name = "Analyzer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
cxx = "1.0"
num-traits = "0.2"
num-derive = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde-pickle = "1.2"
serde_repr = "0.1"

[build-dependencies]
cxx-build = "1.0"

[lib]
name = "replayanalyzer"
crate-type = ["staticlib"]

[profile.release]
strip = "debuginfo"
# opt-level = "s"
# debug = false
# rpath = false
# lto = true
# debug-assertions = false
# codegen-units = 1
# panic = 'abort'
# incremental = false

[profile.release-with-debug]
inherits = "release"
debug = true
strip = false
